[package]
name = "sensor_reader"
version = "0.1.0"
authors = ["Sam Morley <41870650+inakleinbottle@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.7"
paho-mqtt = "0.9.1"
serde = { version = "1.0.125", features=[ "derive" ] }
serde_json = "1.0.64"
chrono = "0.4.19"
lazy_static = "1.4.0"